--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "moment": "2.13.0",
     "reselect": "^3.0.0",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
@@ -55,6 +56,7 @@
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.2",
     "@types/jasmine": "2.5.38",
+    "@types/moment": "2.13.0",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
