--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ngrx/store-devtools": "^3.2.0",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
+    "d3": "^4.9.1",
     "hammerjs": "^2.0.8",
     "moment": "2.13.0",
     "reselect": "^3.0.0",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.2",
+    "@types/d3": "^4.9.0",
     "@types/jasmine": "2.5.38",
     "@types/moment": "2.13.0",
     "@types/node": "~6.0.60",
