fixed bug where e2e tests were not running

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "ng lint --fix",
     "test": "ng test --code-coverage",
     "e2e": "ng e2e",
+    "4300": "ng serve --port=4300",
     "build": "ng build --prod"
   },
   "repository": {
