--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "An application for budgeting",
   "main": "index.ts",
   "scripts": {
+    "4300": "ng serve --port=4300",
     "ng": "ng",
     "start": "ng serve",
     "lint": "ng lint --fix",
     "test": "ng test --code-coverage",
     "e2e": "ng e2e",
-    "4300": "ng serve --port=4300",
     "build": "ng build --prod --aot",
-    "publish": "surge --domain https://ng-budget.surge.sh"    
+    "publish": "surge --domain https://ng-budget.surge.sh"
   },
   "repository": {
     "type": "git",
@@ -30,23 +30,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.5",
+    "@angular/cdk": "2.0.0-beta.12",
     "@angular/common": "^4.4.5",
     "@angular/compiler": "^4.4.5",
     "@angular/core": "^4.4.5",
     "@angular/forms": "^4.4.5",
     "@angular/http": "^4.4.5",
-    "@angular/cdk": "2.0.0-beta.12",
     "@angular/material": "2.0.0-beta.12",
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
     "@ngrx/db": "^2.0.2",
     "@ngrx/effects": "^4.1.0",
+    "@ngrx/router-store": "^4.0.0",
     "@ngrx/store": "^4.1.0",
     "@ngrx/store-devtools": "^4.0.0",
-    "@ngrx/router-store": "^4.0.0",
+    "@swimlane/ngx-charts": "^6.1.0",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "hammerjs": "^2.0.8",
     "moment": "2.13.0",
     "rxjs": "^5.4.2",
