--- a/package.json
+++ b/package.json
@@ -58,13 +58,12 @@
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.4.5",
     "@types/jasmine": "2.5.38",
-    "@types/moment": "2.13.0",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.90",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
